package privatefields

interface Prototype {
    fun clone(): Prototype
}